--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "homepage": "https://coryhrycko.github.io/ShoppingCarteCommerce/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "gh-pages": "^2.0.1",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
